--- a/Lab13/style.css
+++ b/Lab13/style.css
@@ -1,7 +1,7 @@
 body{
+  width:100%;
+  height:100vh;
   text-align: center;
-  width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,12 +9,14 @@ body{
   background-color: #83a4d4;
   color:#556270;
   font-family: "Avenir", san-serif;
+  font-size:10pt;
 }
 
 .box{
+
   background-color: white;
-  height:36.01%;
-  width: 67%;
+  height:37.01%;
+  width: 80%;
   -webkit-box-shadow: 10px 10px 64px 16px rgba(0,0,0,0.18);
 -moz-box-shadow: 10px 10px 64px 16px rgba(0,0,0,0.18);
 box-shadow: 10px 10px 64px 16px rgba(0,0,0,0.18);
@@ -33,7 +35,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#83a4d4', end
 .box2{
   margin:30px;
   background-color: white;
-  height:42.5%;
+  height:44.1%;
   width: 35%;
   -webkit-box-shadow: 10px 10px 64px 16px rgba(0,0,0,0.18);
 -moz-box-shadow: 10px 10px 64px 16px rgba(0,0,0,0.18);
